[package]
name = "sysscope"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.29.10"
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.0.4"
indicatif = "0.17.7"
rand = { version = "0.8.5", features = [] }
ctrlc = "3.2.1"
